[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/home planet.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level.gd" type="Script" id=3]
[ext_resource path="res://Planets/Planet1.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Kenney_gameIcons/PNG/White/2x/Sigmar/Sigmar-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/kenney_emotes-pack/PNG/Vector/Style 1/emote__.png" type="Texture" id=7]
[ext_resource path="res://assets/kenney_emotes-pack/PNG/Vector/Style 1/emote_heart.png" type="Texture" id=8]
[ext_resource path="res://assets/kenney_emotes-pack/PNG/Vector/Style 1/emote_heartBroken.png" type="Texture" id=9]
[ext_resource path="res://assets/Kenney_gameIcons/PNG/White/2x/star.png" type="Texture" id=10]
[ext_resource path="res://assets/Kenney_gameIcons/PNG/White/2x/exit.png" type="Texture" id=11]
[ext_resource path="res://assets/Kenney_gameIcons/PNG/White/2x/return.png" type="Texture" id=12]
[ext_resource path="res://assets/DST-TowerDefenseTheme.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/Kenney sound mp3/phaseJump3.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/Kenney sound mp3/lowDown.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/Kenney sound mp3/powerUp7.mp3" type="AudioStream" id=16]
[ext_resource path="res://assets/Kenney sound mp3/lowRandom.mp3" type="AudioStream" id=17]
[ext_resource path="res://assets/Kenney sound mp3/powerUp3.mp3" type="AudioStream" id=18]
[ext_resource path="res://assets/Kenney sound mp3/phaserDown2.mp3" type="AudioStream" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1046, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.75, 581.75 )

[sub_resource type="DynamicFont" id=14]
size = 147
outline_size = 9
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 89.9999, 86.25 )

[sub_resource type="DynamicFont" id=3]
size = 72
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 51, 60 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 51, 60 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 52, 60 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 51, 60 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 51, 60 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 52, 60 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 51, 61 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 52, 61 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 52, 60 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 51, 60 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=17]
size = 128
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=18]
size = 128
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 966.5, 4.5 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=21]
size = 112
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0.294118 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.6, 0.6, 0.6, 0.196078 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.6, 0.6, 0.6, 0.196078 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )
volume_db = -4.0
autoplay = true
bus = "Music"

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 946.0
mouse_filter = 1
color = Color( 0.14902, 0, 0.882353, 1 )

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2( 0, 880 )
collision_layer = 2

[node name="Sprite" type="Sprite" parent="Platform"]
position = Vector2( 960, 135 )
scale = Vector2( 1.98778, 1.46296 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2( 944, 64 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Platform"]
position = Vector2( -16.25, -337.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Platform"]
position = Vector2( 1936, -375.75 )
shape = SubResource( 2 )

[node name="Planets" type="Node2D" parent="."]

[node name="Planet1" parent="Planets" instance=ExtResource( 5 )]
position = Vector2( 942, -114 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 928, 832 )

[node name="AnswerBubble" type="Area2D" parent="Player"]
position = Vector2( 0, 23.3334 )
collision_layer = 8
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Player/AnswerBubble"]
position = Vector2( 0, -240 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Player/AnswerBubble"]
margin_left = -50.0
margin_top = -386.667
margin_right = 61.0
margin_bottom = -116.667
custom_fonts/font = SubResource( 14 )
text = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AnswerBubble"]
position = Vector2( 0.00012207, -257.083 )
shape = SubResource( 15 )

[node name="RightAnswerSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 16 )
bus = "SoundEffects"

[node name="WrongAnswerSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 17 )
bus = "SoundEffects"

[node name="Choices" type="Node2D" parent="."]

[node name="Choice0" type="Area2D" parent="Choices"]
position = Vector2( 160, 1015 )

[node name="Sprite" type="Sprite" parent="Choices/Choice0"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice0"]
margin_left = -24.0
margin_top = -71.0
margin_right = 32.0
margin_bottom = 48.0
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice0"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice0"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice1" type="Area2D" parent="Choices"]
position = Vector2( 336, 1016 )

[node name="Sprite" type="Sprite" parent="Choices/Choice1"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice1"]
margin_left = -16.0
margin_top = -72.0
margin_right = 22.0
margin_bottom = 47.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice1"]
shape = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice1"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice2" type="Area2D" parent="Choices"]
position = Vector2( 518, 1017 )

[node name="Sprite" type="Sprite" parent="Choices/Choice2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice2"]
margin_left = -22.0
margin_top = -73.0
margin_right = 22.0
margin_bottom = 46.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice2"]
shape = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice2"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice3" type="Area2D" parent="Choices"]
position = Vector2( 694, 1017 )

[node name="Sprite" type="Sprite" parent="Choices/Choice3"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice3"]
margin_left = -22.0
margin_top = -73.0
margin_right = 21.0
margin_bottom = 46.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice3"]
shape = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice3"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice4" type="Area2D" parent="Choices"]
position = Vector2( 870, 1016 )

[node name="Sprite" type="Sprite" parent="Choices/Choice4"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice4"]
margin_left = -22.0
margin_top = -72.0
margin_right = 24.0
margin_bottom = 47.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice4"]
position = Vector2( 0, 1 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice4"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice5" type="Area2D" parent="Choices"]
position = Vector2( 1046, 1016 )

[node name="Sprite" type="Sprite" parent="Choices/Choice5"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice5"]
margin_left = -19.0
margin_top = -72.0
margin_right = 20.0
margin_bottom = 47.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "5"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice5"]
position = Vector2( 0, 1 )
shape = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice5"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice6" type="Area2D" parent="Choices"]
position = Vector2( 1222, 1017 )

[node name="Sprite" type="Sprite" parent="Choices/Choice6"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice6"]
margin_left = -22.0
margin_top = -71.0
margin_right = 24.0
margin_bottom = 48.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice6"]
position = Vector2( 0, -1 )
shape = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice6"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice7" type="Area2D" parent="Choices"]
position = Vector2( 1398, 1016 )

[node name="Sprite" type="Sprite" parent="Choices/Choice7"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice7"]
margin_left = -22.0
margin_top = -72.0
margin_right = 17.0
margin_bottom = 47.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice7"]
shape = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice7"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice8" type="Area2D" parent="Choices"]
position = Vector2( 1574, 1017 )

[node name="Sprite" type="Sprite" parent="Choices/Choice8"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice8"]
margin_left = -22.0
margin_top = -71.0
margin_right = 27.0
margin_bottom = 48.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "8"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice8"]
shape = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice8"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="Choice9" type="Area2D" parent="Choices"]
position = Vector2( 1750, 1017 )

[node name="Sprite" type="Sprite" parent="Choices/Choice9"]
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Choices/Choice9"]
margin_left = -22.0
margin_top = -73.0
margin_right = 25.0
margin_bottom = 46.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "9"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Choices/Choice9"]
shape = SubResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Choices/Choice9"]
stream = ExtResource( 14 )
bus = "SoundEffects"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Hearts" type="Panel" parent="."]
margin_left = 1332.0
margin_top = 64.0
margin_right = 1856.0
margin_bottom = 240.0
custom_styles/panel = SubResource( 16 )

[node name="Heart1Broken" type="TextureRect" parent="Hearts"]
visible = false
margin_left = 36.0
margin_top = 32.0
margin_right = 156.0
margin_bottom = 152.0
texture = ExtResource( 9 )
expand = true

[node name="Heart1" type="TextureRect" parent="Hearts"]
margin_left = 36.0
margin_top = 32.0
margin_right = 156.0
margin_bottom = 152.0
texture = ExtResource( 8 )
expand = true

[node name="Heart2Broken" type="TextureRect" parent="Hearts"]
visible = false
margin_left = 200.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 152.0
texture = ExtResource( 9 )
expand = true

[node name="Heart2" type="TextureRect" parent="Hearts"]
margin_left = 200.0
margin_top = 32.0
margin_right = 320.0
margin_bottom = 152.0
texture = ExtResource( 8 )
expand = true

[node name="Heart3Broken" type="TextureRect" parent="Hearts"]
visible = false
margin_left = 364.0
margin_top = 32.0
margin_right = 484.0
margin_bottom = 152.0
texture = ExtResource( 9 )
expand = true

[node name="Heart3" type="TextureRect" parent="Hearts"]
margin_left = 364.0
margin_top = 32.0
margin_right = 484.0
margin_bottom = 152.0
texture = ExtResource( 8 )
expand = true

[node name="Score" type="Panel" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 588.0
margin_bottom = 240.0
custom_styles/panel = SubResource( 16 )

[node name="StarBorder" type="TextureRect" parent="Score"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 8.0
margin_top = -12.0
margin_right = 208.0
margin_bottom = 188.0
texture = ExtResource( 10 )
expand = true

[node name="Star" type="TextureRect" parent="Score"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 24.0
margin_top = 4.0
margin_right = 194.0
margin_bottom = 174.0
texture = ExtResource( 10 )
expand = true

[node name="Amount" type="Label" parent="Score"]
margin_left = 328.0
margin_top = -22.0
margin_right = 475.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 17 )
text = "10"

[node name="Equal" type="Label" parent="Score"]
margin_left = 206.0
margin_top = -16.0
margin_right = 278.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 18 )
text = "="

[node name="DesctructionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DesctructionArea"]
position = Vector2( 964.5, 938.5 )
shape = SubResource( 19 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DesctructionArea"]
stream = ExtResource( 15 )
volume_db = 2.0
bus = "SoundEffects"

[node name="EndScreen" type="Panel" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 1536.0
margin_bottom = 832.0
custom_styles/panel = SubResource( 20 )

[node name="Header" type="Label" parent="EndScreen"]
margin_left = 256.0
margin_top = 46.0
margin_right = 897.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 21 )
text = "Game over"

[node name="Home" type="Button" parent="EndScreen"]
pause_mode = 2
margin_left = 686.0
margin_top = 398.0
margin_right = 830.0
margin_bottom = 548.0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
icon = ExtResource( 11 )
icon_align = 1

[node name="PressedSound" type="AudioStreamPlayer" parent="EndScreen/Home"]
pause_mode = 2
stream = ExtResource( 19 )
bus = "SoundEffects"

[node name="Replay" type="Button" parent="EndScreen"]
pause_mode = 2
margin_left = 320.0
margin_top = 398.0
margin_right = 464.0
margin_bottom = 548.0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
icon = ExtResource( 12 )
icon_align = 1

[node name="PressedSound" type="AudioStreamPlayer" parent="EndScreen/Replay"]
pause_mode = 2
stream = ExtResource( 19 )
bus = "SoundEffects"

[node name="Score" type="Panel" parent="EndScreen"]
margin_left = 320.0
margin_top = 214.0
margin_right = 844.0
margin_bottom = 390.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="StarBorder" type="TextureRect" parent="EndScreen/Score"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 8.0
margin_top = -12.0
margin_right = 208.0
margin_bottom = 188.0
texture = ExtResource( 10 )
expand = true

[node name="Star" type="TextureRect" parent="EndScreen/Score"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 24.0
margin_top = 4.0
margin_right = 194.0
margin_bottom = 174.0
texture = ExtResource( 10 )
expand = true

[node name="Amount" type="Label" parent="EndScreen/Score"]
margin_left = 328.0
margin_top = -22.0
margin_right = 475.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 17 )
text = "10"

[node name="Equal" type="Label" parent="EndScreen/Score"]
margin_left = 206.0
margin_top = -16.0
margin_right = 278.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 18 )
text = "="

[node name="GameOverSound" type="AudioStreamPlayer" parent="EndScreen"]
pause_mode = 2
stream = ExtResource( 18 )
bus = "SoundEffects"

[connection signal="body_entered" from="Player/AnswerBubble" to="." method="_on_AnswerBubble_body_entered"]
[connection signal="input_event" from="Choices/Choice0" to="." method="_on_Choice0_input_event"]
[connection signal="input_event" from="Choices/Choice1" to="." method="_on_Choice1_input_event"]
[connection signal="input_event" from="Choices/Choice2" to="." method="_on_Choice2_input_event"]
[connection signal="input_event" from="Choices/Choice3" to="." method="_on_Choice3_input_event"]
[connection signal="input_event" from="Choices/Choice4" to="." method="_on_Choice4_input_event"]
[connection signal="input_event" from="Choices/Choice5" to="." method="_on_Choice5_input_event"]
[connection signal="input_event" from="Choices/Choice6" to="." method="_on_Choice6_input_event"]
[connection signal="input_event" from="Choices/Choice7" to="." method="_on_Choice7_input_event"]
[connection signal="input_event" from="Choices/Choice8" to="." method="_on_Choice8_input_event"]
[connection signal="input_event" from="Choices/Choice9" to="." method="_on_Choice9_input_event"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="DesctructionArea" to="." method="_on_DesctructionArea_body_entered"]
[connection signal="pressed" from="EndScreen/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="EndScreen/Replay" to="." method="_on_Replay_pressed"]
